--- a/Web/web/Blazor/Pages/MisUsuarios/Usuarios.razor
+++ b/Web/web/Blazor/Pages/MisUsuarios/Usuarios.razor
@@ -1,2 +1,53 @@
-﻿<h3>Usuarios</h3>
+﻿@page "/Usuarios"
+@using Modelos;
 
+<h3>Usuarios</h3>
+
+@if(lista == null)
+{
+    <p>No existen usuarios en la lista</p>
+}
+else
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Codigo</th>
+                <th>Nombre</th>
+                <th>Correo</th>
+                <th>Rol</th>
+                <th>Foto</th>
+                <th>Fecha Creacion</th>
+                <th>Esta Activo</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach(Usuarios user in lista)
+            {
+                <tr>
+                    <th>@user.CodigoUsuario</th>
+                    <th>@user.Nombre</th>
+                    <th>@user.Correo</th>
+                    <th>@user.Rol</th>
+                    <th>@user.Foto</th>
+                    <th>@user.FechaCreacion</th>
+                    @if(user.EstaActivo)
+                    {
+                        <th>
+                            <span class="oi oi-circle-check" style="color:green;"></span>
+                        </th>
+                    }
+                    else
+                    {
+                        <th>
+                            <span class="oi oi-circle-x" style="color:red;"></span>
+                        </th>
+                    }
+                    <th>
+                        <a class="btn btn-success" href="@($"/Usuarios/Editar")">Editar</a>
+                    </th>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
