--- a/Web/web/Blazor/Pages/MisUsuarios/EditarUsuario.razor
+++ b/Web/web/Blazor/Pages/MisUsuarios/EditarUsuario.razor
@@ -1,7 +1,64 @@
-﻿@page "/Usuarios/Editar"
+﻿@page "/Usuarios/Editar/{CodigoUsuario}"
 
-<h3>EditarUsuario</h3>
 
-@code {
+<AuthorizeView Roles="Administrador">
+    <Authorized Context="AuthenticationState">
+        <h3>Editar Usuario</h3>
+
+        <EditForm Model="@user">
+            <DataAnnotationsValidator />
+            <div class="form-group row">
+                <label for="CodigoUsuario" class="col-sm-2 col-form-label">
+                    Codigo Usuario
+                </label>
+                <div class="col-sm-10">
+                    <label for="CodigoUsuario" class="col-form-label">
+                        @user.CodigoUsuario
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="Nombre" class="col-sm-2 col-form-label">
+                    Nombre
+                </label>
+                <div class="col-sm-10">
+                    <InputText id="Nombre" class="form-control" @bind-Value="user.Nombre" />
+                    <ValidationMessage For="@(() => user.Nombre)" />
+                </div>
+            </div>
+
+             <div class="form-group row">
+                <label for="Contrasena" class="col-sm-2 col-form-label">
+                    Contraseña
+                </label>
+                <div class="col-sm-10">
+                    <InputText id="contrasena" type="password" class="form-control" @bind-Value="user.Contrasena" />
+                    <ValidationMessage For="@(() => user.Contrasena)" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="Correo" class="col-sm-2 col-form-label">
+                    Correo
+                </label>
+                <div class="col-sm-10">
+                    <InputText id="Correo" type="email" class="form-control" @bind-Value="user.Correo" />                    
+                </div>
+            </div>
+
+        </EditForm>
+
+    </Authorized>
+    <NotAuthorized>
+        <h3>No tiene permiso para ingresar a esta Ruta</h3>
+    </NotAuthorized>
+</AuthorizeView>
+
+
+
+
+@*@code {
 
 }
+*@
