--- a/Web/web/Blazor/Pages/MisUsuarios/EditarUsuario.razor
+++ b/Web/web/Blazor/Pages/MisUsuarios/EditarUsuario.razor
@@ -47,6 +47,60 @@
                 </div>
             </div>
 
+            <div class="form-group row">
+                <label for="Rol" class="col-sm-2 col-form-label">
+                    Rol
+                </label>
+                <div class="col-sm-10">
+                    <InputSelect class="form-control" @bind-Value="user.Rol">
+                        @foreach(var rol in Enum.GetValues(typeof(Roles)))
+                        {
+                            <option value="@rol">@rol</option>
+                        }
+                    </InputSelect>
+                    <ValidationMessage For="@(() => user.Rol)" />
+                </div>
+            </div>
+
+           @* <div class="form-group row">
+                <label for="Fotos" class="col-sm-2 col-form-label">
+                    Fotos
+                </label>
+                <div class="col-sm-10">
+                    <InputText id="Fotos" type="email" class="form-control" @bind-Value="user.Fotos" />                    
+                </div>
+            </div>*@
+
+            <div class="form-group row">
+                <label for="FechaCreacion" class="col-sm-2 col-form-label">
+                    Fecha Creacion
+                </label>
+                <div class="col-sm-10">
+                    <label for="FechaCreacion" class="col-form-label">
+                        @user.FechaCreacion.ToShortDateString()
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="EstaActivo" class="col-sm-2 col-form-label">
+                    Esta Activo
+                </label>
+                <div class="col-sm-10">
+                    <InputCheckbox  @bind-Value="user.EstaActivo" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <p>
+                    <input type="submit" class="btn btn-primary" value="Guardar" @onclick="Guardar" />
+                    <input type="submit" class="btn btn-danger" value="Cancelar" @onclick="Cancelar" />
+                    <input type="submit" class="btn btn-warning" value="Eliminar" @onclick="Eliminar" />
+                </p>
+            </div>
+
+
+
         </EditForm>
 
     </Authorized>
