--- a/Web/web/Blazor/Pages/MisUsuarios/Usuarios.razor
+++ b/Web/web/Blazor/Pages/MisUsuarios/Usuarios.razor
@@ -2,7 +2,13 @@
 @using Modelos;
 <AuthorizeView Roles="Administrador">
     <Authorized Context="AuthenticationAtate">
-        <h3>Usuarios</h3>
+        <h3>Lista de Usuarios</h3>
+
+        <div class="form-group row">
+            <div class="col-sm-2">
+                <a href="/Usuarios/Nuevo" class="btn btn-primary m-2">Nuevo</a>
+            </div>
+        </div>
 
         @if (lista == null)
         {
@@ -23,14 +29,23 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (Modelos.Usuarios user in lista)
+                    @foreach (Modelos.Usuario user in lista)
                     {
                         <tr>
                             <th>@user.CodigoUsuario</th>
                             <th>@user.Nombre</th>
                             <th>@user.Correo</th>
                             <th>@user.Rol</th>
-                            <th>@user.Fotos</th>
+                            @if(user.Foto != null)
+                            {
+                                <th>
+                                    <img width="40" height="40" src="dat:image;base64,@System.Convert.ToBase64String(user.Foto)" />
+                                </th>
+                            }
+                            else
+                            {
+                                <th></th>
+                            }
                             <th>@user.FechaCreacion</th>
                             @if (user.EstaActivo)
                             {
