--- a/Web/web/Blazor/Pages/MisUsuarios/NuevoUsuario.razor
+++ b/Web/web/Blazor/Pages/MisUsuarios/NuevoUsuario.razor
@@ -62,14 +62,14 @@
             </div>
 
             <div class="form-group row">
-                <label for="Fotos" class="col-sm-2 col-form-label">
+                <label for="Foto" class="col-sm-2 col-form-label">
                     Foto
                 </label>
                 <div class="col-sm-10">
                     <InputFile OnChange="@SeleccionarImagen" />
                     @if (user.Foto != null)
                     {
-                        <img width="250" height="250" src="dat:image;base64,@System.Convert.ToBase64String(user.Foto)" />
+                        <img width="250" height="250" src="data:image;base64,@System.Convert.ToBase64String(user.Foto)" />
                     }
                     else
                     {
