avance clase 36 productos nuevo producto
avance clase 36

--- a/Web/web/Blazor/Pages/MisUsuarios/Usuarios.razor
+++ b/Web/web/Blazor/Pages/MisUsuarios/Usuarios.razor
@@ -39,7 +39,7 @@
                             @if(user.Foto != null)
                             {
                                 <th>
-                                    <img width="40" height="40" src="dat:image;base64,@System.Convert.ToBase64String(user.Foto)" />
+                                    <img width="40" height="40" src="data:image;base64,@System.Convert.ToBase64String(user.Foto)" />
                                 </th>
                             }
                             else
