--- a/Web/web/Blazor/Pages/MisClientes/Clientes.razor
+++ b/Web/web/Blazor/Pages/MisClientes/Clientes.razor
@@ -1,1 +1,66 @@
 ﻿@page "/Clientes"
+@using Modelos;
+<AuthorizeView Roles="Administrador">
+    <Authorized Context="AuthenticationAtate">
+        <h3>Lista de Clientes</h3>
+
+        <div class="form-group row">
+            <div class="col-sm-2">
+                <a href="/Clientes/Nuevo" class="btn btn-primary m-2">Nuevo</a>
+            </div>
+        </div>
+
+        @if (listaClientes == null)
+        {
+            <p>No existen Clientes en la lista</p>
+        }
+        else
+        {
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Identidad</th>
+                        <th>Nombre</th>
+                        <th>Telefono</th>
+                        <th>Correo</th>                       
+                        <th>Direccion</th>
+                        <th>Fecha Nacimiento</th>
+                        <th>Esta Activo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (Cliente clien in listaClientes)
+                    {
+                        <tr>
+                            <th>@clien.Identidad</th>
+                            <th>@clien.Nombre</th>
+                            <th>@clien.Telefono</th>
+                            <th>@clien.Correo</th>
+                            <th>@clien.</th>
+                            <th>@clien.Direccion</th>                           
+                            <th>@clien.FechaNacimiento</th>
+                            @if (clien.EstaActivo)
+                            {
+                                <th>
+                                    <span class="oi oi-circle-check" style="color:green;"></span>
+                                </th>
+                            }
+                            else
+                            {
+                                <th>
+                                    <span class="oi oi-circle-x" style="color:red;"></span>
+                                </th>
+                            }
+                            <th>
+                                <a class="btn btn-success" href="@($"/Clientes/Editar/{clien.Identidad}")">Editar</a>
+                            </th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+    </Authorized>
+    <NotAuthorized>
+        <h3>No Tiene permisos para ingresar a esta ruta</h3>
+    </NotAuthorized>
+</AuthorizeView>
