--- a/Web/web/Blazor/Pages/MisClientes/NuevoCliente.razor
+++ b/Web/web/Blazor/Pages/MisClientes/NuevoCliente.razor
@@ -4,15 +4,15 @@
     <Authorized Context="AuthenticationState">
         <h3>Nuevo Cliente</h3>
 
-        <EditForm Model="@clien">
+        <EditForm Model="@cliente">
             <DataAnnotationsValidator />
             <div class="form-group row">
                 <label for="Identidad" class="col-sm-2 col-form-label">
                     Identidad Cliente
                 </label>
                 <div class="col-sm-10">
-                    <InputNumber id="Identidad" class="form-control" @bind-Value="clien.Identidad" />
-                    <ValidationMessage For="@(() => clien.Identidad)" />
+                    <InputNumber id="Identidad" class="form-control" @bind-Value="cliente.Identidad" />
+                    <ValidationMessage For="@(() => cliente.Identidad)" />
                 </div>
             </div>
 
@@ -21,8 +21,8 @@
                     Nombre Cliente
                 </label>
                 <div class="col-sm-10">
-                    <InputText id="Nombre" class="form-control" @bind-Value="clien.Nombre" />
-                    <ValidationMessage For="@(() => clien.Nombre)" />
+                    <InputText id="Nombre" class="form-control" @bind-Value="cliente.Nombre" />
+                    <ValidationMessage For="@(() => cliente.Nombre)" />
                 </div>
             </div>
 
@@ -31,8 +31,8 @@
                     Direccion
                 </label>
                 <div class="col-sm-10">
-                    <InputText id="Direccion" class="form-control" @bind-Value="clien.Direccion" />
-                    <ValidationMessage For="@(() => clien.Direccion)" />
+                    <InputText id="Direccion" class="form-control" @bind-Value="cliente.Direccion" />
+                    <ValidationMessage For="@(() => cliente.Direccion)" />
                 </div>
             </div>
 
@@ -41,8 +41,8 @@
                     Correo
                 </label>
                 <div class="col-sm-10">
-                    <InputText id="Correo" class="form-control" @bind-Value="clien.Correo" />
-                    <ValidationMessage For="@(() => clien.Correo)" />
+                    <InputText id="Correo" class="form-control" @bind-Value="cliente.Correo" />
+                    <ValidationMessage For="@(() => cliente.Correo)" />
                 </div>
             </div>
 
@@ -51,8 +51,8 @@
                     Telefono Cliente
                 </label>
                 <div class="col-sm-10">
-                    <InputNumber id="Telefono" class="form-control" @bind-Value="clien.Telefono" />
-                    <ValidationMessage For="@(() => clien.Telefono)" />
+                    <InputNumber id="Telefono" class="form-control" @bind-Value="cliente.Telefono" />
+                    <ValidationMessage For="@(() => cliente.Telefono)" />
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                     Esta Activo
                 </label>
                 <div class="col-sm-10">
-                    <InputCheckbox @bind-Value="clien.EstaActivo" />
+                    <InputCheckbox @bind-Value="cliente.EstaActivo" />
                 </div>
             </div>
 
@@ -71,7 +71,7 @@
                 </label>
                 <div class="col-sm-10">
                     <label for="FechaNacimiento" class="col-form-label">
-                        @clien.FechaNacimiento.ToShortDateString()
+                        @cliente.FechaNacimiento.ToShortDateString()
                     </label>
                 </div>
             </div>
