--- a/Web/web/Blazor/Pages/MisClientes/EditarCliente.razor
+++ b/Web/web/Blazor/Pages/MisClientes/EditarCliente.razor
@@ -1,4 +1,4 @@
-﻿@page "/Clientes/Editar/{Identidad}"
+﻿@page "/Clientes/EditarCliente/{Identidad}"
 
 <AuthorizeView Roles="Administrador">
     <Authorized Context="AuthenticationState">
@@ -52,7 +52,7 @@
                     Telefono Cliente
                 </label>
                 <div class="col-sm-10">
-                    <InputNumber id="Telefono" class="form-control" @bind-Value="clien.Telefono" />
+                    <InputText id="Telefono" class="form-control" @bind-Value="clien.Telefono" />
                     <ValidationMessage For="@(() => clien.Telefono)" />
                 </div>
             </div>
