--- a/Web/web/Blazor/Pages/MisClientes/NuevoCliente.razor
+++ b/Web/web/Blazor/Pages/MisClientes/NuevoCliente.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Clientes/Nuevo"
 
+
 <AuthorizeView Roles="Administrador">
     <Authorized Context="AuthenticationState">
         <h3>Nuevo Cliente</h3>
@@ -11,7 +12,7 @@
                     Identidad Cliente
                 </label>
                 <div class="col-sm-10">
-                    <InputNumber id="Identidad" class="form-control" @bind-Value="cliente.Identidad" />
+                    <InputText id="Identidad" class="form-control" @bind-Value="cliente.Identidad" />
                     <ValidationMessage For="@(() => cliente.Identidad)" />
                 </div>
             </div>
@@ -51,7 +52,7 @@
                     Telefono Cliente
                 </label>
                 <div class="col-sm-10">
-                    <InputNumber id="Telefono" class="form-control" @bind-Value="cliente.Telefono" />
+                    <InputText id="Telefono" class="form-control" @bind-Value="cliente.Telefono" />
                     <ValidationMessage For="@(() => cliente.Telefono)" />
                 </div>
             </div>
