--- a/Web/web/Blazor/Shared/NavMenu.razor
+++ b/Web/web/Blazor/Shared/NavMenu.razor
@@ -39,11 +39,21 @@
             </Authorized>
         </AuthorizeView>
 
-        <AuthorizeView Roles="Administrador">
+        <AuthorizeView Roles="Administrador, usuario">
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Clientes">
                         <span class="oi oi-compass" aria-hidden="true"></span> Clientes
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+
+        <AuthorizeView Roles="Administrador, Usuario">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="NuevaFactura">
+                        <span class="oi oi-code" aria-hidden="true"></span> Factura
                     </NavLink>
                 </div>
             </Authorized>
